error version angular

--- a/angular.json
+++ b/angular.json
@@ -105,5 +105,8 @@
       }
     }
   },
-  "defaultProject": "portfolio"
+  "defaultProject": "portfolio",
+  "cli": {
+    "analytics": false
+  }
 }
