--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -25,7 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.7",
-    "@angular/cli": "~13.3.7",
+    "@angular/cli": "^14.0.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
