--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=C1932
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+jwt.secret = secret
+jwt.expiration = 3600
